cmake_minimum_required(VERSION 2.6)
project(DecisionJungle)
set (DecisionJungle_VERSION_MAJOR 1)
set (DecisionJungle_VERSION_MINOR 0)
add_subdirectory ( src )
add_executable(jungle src/cliInterface.cpp )
target_link_libraries(jungle lib_jungle )
add_definitions ( -std=c++0x -O3)
find_package(OpenMP)
if (OPENMP_FOUND)
    set(OPEN_MP "1")
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
else()
    set(OPEN_MP "0")
endif()